--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@commitlint/config-conventional": "^19.2.2",
     "@hookform/resolvers": "^3.3.4",
+    "@react-email/components": "0.0.18",
+    "react-email": "2.1.4",
     "@logsnag/next": "^1.0.3",
     "@openstatus/react": "^0.0.3",
     "@prisma/client": "^5.14.0",
@@ -33,7 +35,6 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@react-email/components": "^0.0.16",
     "@react-email/render": "^0.0.12",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@vercel/analytics": "^1.2.2",
