--- a/package.json
+++ b/package.json
@@ -25,23 +25,49 @@
   "dependencies": {
     "@commitlint/config-conventional": "^19.2.2",
     "@hookform/resolvers": "^3.3.4",
-    "@react-email/components": "0.0.18",
-    "react-email": "2.1.4",
     "@logsnag/next": "^1.0.3",
     "@openstatus/react": "^0.0.3",
     "@prisma/client": "^5.14.0",
     "@prisma/extension-accelerate": "^1.0.0",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-context-menu": "^2.2.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-email/components": "0.0.18",
     "@react-email/render": "^0.0.12",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "contentlayer": "^0.3.4",
+    "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.1.6",
     "framer-motion": "^11.1.3",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
     "next-contentlayer": "^0.3.4",
@@ -49,17 +75,23 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-email": "2.1.4",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-resizable-panels": "^2.0.20",
+    "recharts": "^2.12.7",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.13.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^11.0.0",
     "shiki": "^1.3.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
