--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@react-email/components": "0.0.18",
     "@react-email/render": "^0.0.12",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
