--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-email": "2.1.4",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-parallax-tilt": "^1.7.232",
     "react-resizable-panels": "^2.0.20",
     "recharts": "^2.12.7",
     "rehype-autolink-headings": "^7.1.0",
