--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vercel/analytics": "^1.2.2",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
