--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "cobe": "^0.6.3",
     "contentlayer": "^0.3.4",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
@@ -84,6 +85,7 @@
     "react-icons": "^5.1.0",
     "react-parallax-tilt": "^1.7.232",
     "react-resizable-panels": "^2.0.20",
+    "react-spring": "^9.7.4",
     "recharts": "^2.12.7",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.13.1",
