--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-email": "2.1.4",
@@ -86,6 +87,7 @@
     "react-parallax-tilt": "^1.7.232",
     "react-resizable-panels": "^2.0.20",
     "react-spring": "^9.7.4",
+    "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.12.7",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.13.1",
