build(brand): init karhba-go

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,18 @@
+NODE_ENV=
+
 # DATABASE_URL is the connection string to the database 
 DATABASE_URL=
-DATABASE_URL_ACCELRATE=
+DATABASE_PASSWORD=
+
+# Supabase 
+SUPABSE_URL=
+SUPABASE_JWT_SECRET=
+SUPABSE_ANON_API=
+SUPABSE_SERVICE_ROLE=
 
 # LogSnog: https://logsnog.com for logging events
 LOGSNOG_API_TOKEN=
 LOGSNOG_PROJECT_NAME=
-
-# Loops: https://app.loops.so/
-LOOPS_API_TOKEN=
-LOOPS_NEWSLETTER_WHITELIST=
 
 # Nodemailer configureation
 FROM_EMAIL=
