--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "lint": "next lint",
     "preview": "next build && next start",
     "postinstall": "prisma generate",
-    "prepare": "husky",
     "lint:fix": "next lint --fix",
     "lint:strict": "next lint '*/**/*.{js,jsx,ts,tsx}'",
     "prettier": "prettier --write */**/*.{js,jsx,json,ts,tsx,scss,css,md}",
@@ -26,9 +25,9 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@hookform/resolvers": "^3.3.4",
     "@logsnag/next": "^1.0.3",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@openstatus/react": "^0.0.3",
-    "@prisma/client": "^5.14.0",
-    "@prisma/extension-accelerate": "^1.0.0",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -73,6 +72,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
+    "next-auth": "^4.24.7",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
@@ -102,7 +102,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@types/node": "^20",
+    "@types/node": "^20.12.7",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -113,13 +113,13 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-tailwindcss": "^3.15.1",
-    "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
