--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "fix": "prettier . --write && next lint --fix"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.2",
     "@commitlint/config-conventional": "^19.2.2",
     "@hookform/resolvers": "^3.3.4",
     "@logsnag/next": "^1.0.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@openstatus/react": "^0.0.3",
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "^5.18.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -72,7 +73,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
-    "next-auth": "^4.24.7",
+    "next-auth": "5.0.0-beta.20",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
@@ -117,7 +118,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "prisma": "^5.14.0",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
