--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-parallax-tilt": "^1.7.232",
+    "react-phone-number-input": "^3.4.5",
     "react-resizable-panels": "^2.0.20",
     "react-spring": "^9.7.4",
     "react-syntax-highlighter": "^15.5.0",
